@@ -7,6 +7,7 @@ import com.example.cqrscore.events.EventModel;
 import com.example.cqrscore.exception.AggregateNotFoundException;
 import com.example.cqrscore.exception.ConcurrencyException;
 import com.example.cqrscore.infrastructure.EventStore;
+import com.example.cqrscore.producers.EventProducer;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.stereotype.Service;
@@ -14,20 +15,22 @@ import org.springframework.stereotype.Service;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Log4j2
 @RequiredArgsConstructor
 public class AccountEventStore implements EventStore {
+    private final EventProducer eventProducer;
 
     private final EventStoreRepository eventStoreRepository;
 
     @Override
     public void saveEvent(String aggregateId, Iterable<BaseEvent> events, int expectedVersion) {
         var eventStream = eventStoreRepository.findByAggregateIdentifier(aggregateId);
-        if (expectedVersion != -1 && eventStream.get(eventStream.size() -1).getVersion() != expectedVersion){
-            throw new ConcurrencyException();
-        }
+//        if (expectedVersion != -1 && eventStream.get(eventStream.size() - 1).getVersion() != expectedVersion) {
+//            throw new ConcurrencyException();
+//        }
         var version = expectedVersion;
         for (var event :events){
             version++;
@@ -41,9 +44,9 @@ public class AccountEventStore implements EventStore {
                     .eventData(event)
                     .build();
             var persistedEvent = eventStoreRepository.save(eventModel);
-            if (persistedEvent != null)
+            if (!persistedEvent.getId().isEmpty())
             {
-                // TODO : produce event on kafka ....
+                eventProducer.produce(event.getClass().getSimpleName(),event);
             }
         }
     }
@@ -51,11 +54,9 @@ public class AccountEventStore implements EventStore {
     @Override
     public List<BaseEvent> getEvents(String aggregateId) {
         var eventStream = eventStoreRepository.findByAggregateIdentifier(aggregateId);
-        if (eventStream == null && eventStream.isEmpty()){
-            throw new AggregateNotFoundException("Incorrect account Id provided ! ");
+        if (eventStream == null || eventStream.isEmpty()) {
+            throw new AggregateNotFoundException("Incorrect account ID provided!");
         }
-        return eventStream.stream()
-                .map(EventModel::getEventData)
-                .toList();
+        return eventStream.stream().map(EventModel::getEventData).collect(Collectors.toList());
     }
 }
